welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:11: error: value Red is not a member of object java.awt.Color
def run1() {faire1(Color.Red);avance(2);faire2(Color.Blue);recule(2);gauche();avance(2);droite();faire2(Color.yellow);avance(2);faire1(Color.green);recule(2);droite();avance(2);gauche()}
                         ^PatternPicture:11: error: value Blue is not a member of object java.awt.Color
def run1() {faire1(Color.Red);avance(2);faire2(Color.Blue);recule(2);gauche();avance(2);droite();faire2(Color.yellow);avance(2);faire1(Color.green);recule(2);droite();avance(2);gauche()}
                                                     ^